ethereum/bases/geth_miner_deployment.yaml
# Would this be required for Clique???
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eth-geth-miner
  labels:
    app: eth-geth-miner
spec:
  serviceName: "eth-geth-miner"
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-geth-miner
  template:
    metadata:
      labels:
        app: eth-geth-miner
    spec:
      securityContext:
        runAsUser: 2 # non-root
        fsGroup: 2
      volumes:
      - name: eth-geth-miner-data
        persistentVolumeClaim:
          claimName: "eth-geth-miner-data"
      - name: config
        configMap:
          name: geth-config
          items:
          - key: "genesis.json"
            path: "genesis.json"
      containers:
      - name: geth-miner
        image: ethereum/client-go:stable
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: "1"
        command: ["/bin/sh"]
        args:
        - "-c"
        - "geth --datadir='/etc/.ethereum' --bootnodes=`cat /etc/.ethereum/bootnodes` --mine --miner.etherbase=0 --networkid=${NETWORK_ID} --metrics --miner.threads=1 --ethash.dagdir='/etc/.ethereum/.ethash' --ethstats=${HOSTNAME}:${ETHSTATS_SECRET}@${ETHSTATS_SVC}"
        ports:
        - name: discovery-udp
          containerPort: 30303
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30303
        volumeMounts:
        - name: eth-geth-miner-data
          mountPath: /etc/.ethereum
  volumeClaimTemplates:
    - metadata:
        name: eth-geth-miner-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "standard"
        resources:
          requests:
            storage: 10Gi
