ethereum/bases/blockscout_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockscout-lb
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "blockscout-lb-backendconfig"}'
    networking.gke.io/load-balancer-type: "Internal"
spec:
  selector:
    app: blockscout
  type: NodePort
  ports:
  - name: http
    port: 4000
