ethereum/bases/ethstats_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
  labels:
    app: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats-lb
  annotations:
      cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
      cloud.google.com/backend-config: '{"default": "eth-ethstats-backendconfig"}'
spec:
  selector:
    app: eth-ethstats
  type: NodePort
  ports:
  - name: http
    port: 443
    targetPort: 80
